Refactor EditorComponent into MetaComponent.
EditorComponent used to contain information about an entity's ID
and prototype, as well as options for that entity within the editor.

Now, MetaComponent only contains the entity metadata (entity ID,
prototype, provenance of each entity component), and the editor options
have been moved into the world editor library.

Tested: Runs on Mac desktop, builds on Linux desktop and for Android.

Change-Id: I878012477ebf62424d177d427b7aa8e8b5c1a05e

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,20 +86,20 @@ set(entity_SRCS
     src/entity_manager.cpp)
 
 # Includes for this project.
-include_directories(src include src/entity include/entity)
+include_directories(src include)
 
 if (entity_build_component_library)
   set(COMPONENT_COLLECTION_DIR ${CMAKE_CURRENT_SOURCE_DIR}/component_library)
   # component library source files.
   set(component_library_SRCS
       ${COMPONENT_COLLECTION_DIR}/include/component_library/common_services.h
-      ${COMPONENT_COLLECTION_DIR}/include/component_library/editor.h
+      ${COMPONENT_COLLECTION_DIR}/include/component_library/meta.h
       ${COMPONENT_COLLECTION_DIR}/include/component_library/entity_factory.h
       ${COMPONENT_COLLECTION_DIR}/include/component_library/physics.h
       ${COMPONENT_COLLECTION_DIR}/include/component_library/rendermesh.h
       ${COMPONENT_COLLECTION_DIR}/include/component_library/transform.h
       ${COMPONENT_COLLECTION_DIR}/src/common_services.cpp
-      ${COMPONENT_COLLECTION_DIR}/src/editor.cpp
+      ${COMPONENT_COLLECTION_DIR}/src/meta.cpp
       ${COMPONENT_COLLECTION_DIR}/src/entity_factory.cpp
       ${COMPONENT_COLLECTION_DIR}/src/rendermesh.cpp
       ${COMPONENT_COLLECTION_DIR}/src/physics.cpp
@@ -124,11 +124,13 @@ if (entity_build_component_library)
     get_filename_component(filename ${flatbuffers_schema} NAME_WE)
     set(flatbuffers_include
       ${COMPONENT_LIBRARY_FLATBUFFERS_GENERATED_INCLUDES_DIR}/${filename}_generated.h)
+    file(COPY ${flatbuffers_schema}
+         DESTINATION ${CMAKE_BINARY_DIR}/assets/flatbufferschemas/)
     add_custom_command(
       OUTPUT ${flatbuffers_include}
       COMMAND flatc --gen-includes --gen-mutable
-          -I ${dependencies_fplbase_dir}/schemas
           -o ${COMPONENT_LIBRARY_FLATBUFFERS_GENERATED_INCLUDES_DIR}
+          -I ${dependencies_fplbase_dir}/schemas
           -c ${flatbuffers_schema}
       DEPENDS flatc ${flatbuffers_schema})
     list(APPEND FLATBUFFERS_GENERATED_INCLUDES ${flatbuffers_include})
