Moved from the event library to Breadboard.
Now that breadboard has a name and a new namespace, all references to
the event system have been updated to point at Breadboard.

Also deleted an obsolete files.

Tested on Linux and Android.

Change-Id: I26965157a4188a8c6083e7790aba718b9c59edf3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,8 +54,8 @@ set(dependencies_flatbuffers_dir "${fpl_root}/flatbuffers"
     CACHE PATH "Directory containing the Flatbuffers library.")
 set(dependencies_fplutil_dir "${fpl_root}/fplutil"
     CACHE PATH "Directory containing the fplutil library.")
-set(dependencies_event_dir "${fpl_root}/event"
-    CACHE PATH "Directory containing the event library.")
+set(dependencies_breadboard_dir "${fpl_root}/breadboard"
+    CACHE PATH "Directory containing the breadboard library.")
 set(dependencies_pindrop_dir "${fpl_root}/pindrop"
     CACHE PATH "Directory containing the pindrop library.")
 set(dependencies_fplbase_dir "${fpl_root}/fplbase"
@@ -146,7 +146,7 @@ if (entity_build_component_library)
   include_directories(${COMPONENT_LIBRARY_FLATBUFFERS_GENERATED_INCLUDES_DIR})
   include_directories(${dependencies_bulletphysics_distr_dir}/src)
   include_directories(${dependencies_entity_dir}/include)
-  include_directories(${dependencies_event_dir}/include)
+  include_directories(${dependencies_breadboard_dir}/include)
   include_directories(${dependencies_flatbuffers_dir}/include)
   include_directories(${dependencies_fplbase_dir}/include)
   include_directories(${dependencies_fplutil_dir}/libfplutil/include)
