Build external libraries without warnings.
Change-Id: Ib12161faf809bc3f45e95937c1f30c487b37a487
Tested: Builds without warnings on Linux and Mac.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@ CMakeFiles/*
 component_library/CMakeFiles/*
 component_library/gen
 *~
+CMakeCache.txt
+Makefile
+assets/
+bin/
+cmake_install.cmake
+obj/
