Creating a basic CORGI sample.
As part of the documentation, I created a well-commented
sample for CORGI that can be compiled and run.

Bug: b/24939095
Change-Id: Ia384c75fc4f4f7233b90db05ab16ff708dcd9205
Tested: Tested by building and running on Ubuntu and Android
        (built from Ubuntu).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ project(entity)
 option(entity_build_component_library
   "Build a library of standard components along with the entity system"
   ON)
+option(entity_build_samples "Build samples for this project." ON)
 
 # Compile the game with the debug flag
 set(entity_DEBUG ON)
@@ -229,3 +230,7 @@ if (entity_build_component_library)
   mathfu_configure_flags(component_library)
   restore_compiler_flags()
 endif()  # entity_build_component_library
+
+if(entity_build_samples)
+  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/samples)
+endif()
