Integrated latest changes into CORGI
a5245ff Adding doxygen comments to `camera_interface.h`.
a984ca8 Added doxygen comments to PhysicsComponent.
fa7d164 Merge "Adding doxygen comments to `common_services.h`." into
ub-games-master
8214d44 Merge "Adding doxygen comments to `MetaComponent`." into
ub-games-master
ce647d6 Merge "Added doxygen comments to (Default)EntityFactory." into
ub-games-master
f41d99d Merge "Adding doxygen comments to `component_utils.h`." into
ub-games-master
699d086 Merge "Adding doxygen comments to GraphComponent." into
ub-games-master
033f393 Adding doxygen comments to `component_utils.h`.
c7c3b1c Adding doxygen comments to `common_services.h`.
611aa76 Adding doxygen comments to GraphComponent.
d88944c Added doxygen comments to (Default)EntityFactory.
f851334 Adding doxygen comments to `MetaComponent`.
2712b67 Merge "Added version string" into ub-games-master
c86e6d5 Added version string
0ea117e Merge "Adding virtual destructors to various classes." into
ub-games-master
219ad71 Adding virtual destructors to various classes.
3b91a6a Set default strings when exporting data w/force defaults on.

Tested:
Verified the package builds for Linux and Android.

Change-Id: Id86db08b234718c914e2e24bdefaa4b091af601f

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,7 +81,8 @@ set(corgi_SRCS
     include/corgi/entity_manager.h
     include/corgi/entity.h
     include/corgi/vector_pool.h
-    src/entity_manager.cpp)
+    src/entity_manager.cpp
+    src/version.cpp)
 
 # Includes for this project.
 include_directories(src include)
